--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <script src="js.js" defer></script>
 </head>
 <body>
-    
+    <div id="board">
+        <div id="cell1"></div>
+        <div id="cell2"></div>
+        <div id="cell3"></div>
+        <div id="cell4"></div>
+        <div id="cell5"></div>
+        <div id="cell6"></div>
+        <div id="cell7"></div>
+        <div id="cell8"></div>
+        <div id="cell9"></div>
+    </div>
 </body>
 </html>
