gameboard font size

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <div id="board">
-        <div id="cell1"></div>
-        <div id="cell2"></div>
-        <div id="cell3"></div>
-        <div id="cell4"></div>
-        <div id="cell5"></div>
-        <div id="cell6"></div>
-        <div id="cell7"></div>
-        <div id="cell8"></div>
-        <div id="cell9"></div>
+        <div id="cell1">x</div>
+        <div id="cell2">o</div>
+        <div id="cell3">x</div>
+        <div id="cell4">o</div>
+        <div id="cell5">o</div>
+        <div id="cell6">x</div>
+        <div id="cell7">x</div>
+        <div id="cell8">o</div>
+        <div id="cell9">x</div>
     </div>
 </body>
 </html>
