html for reset button

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <div id="cell8">8</div>
         <div id="cell9">9</div>
     </div>
+    <div>
+        <button id="resetGame">Reset</button>
+    </div>
 </body>
 </html>
