html for game title, player info

--- a/index.html
+++ b/index.html
@@ -9,17 +9,29 @@
     <script src="js.js" defer></script>
 </head>
 <body>
-    <div id="board">
-        <div id="cell1">1</div>
-        <div id="cell2">2</div>
-        <div id="cell3">3</div>
-        <div id="cell4">4</div>
-        <div id="cell5">5</div>
-        <div id="cell6">6</div>
-        <div id="cell7">7</div>
-        <div id="cell8">8</div>
-        <div id="cell9">9</div>
+    <div id="player1">
+        <input type="text">
     </div>
+
+    <div>
+        <h1>Tic-Tace-Toe</h1>
+        <div id="board">
+            <div id="cell1">1</div>
+            <div id="cell2">2</div>
+            <div id="cell3">3</div>
+            <div id="cell4">4</div>
+            <div id="cell5">5</div>
+            <div id="cell6">6</div>
+            <div id="cell7">7</div>
+            <div id="cell8">8</div>
+            <div id="cell9">9</div>
+        </div>
+    </div>
+
+    <div id="player2">
+        <input type="text">
+    </div>
+
     <div>
         <button id="resetGame">Reset</button>
     </div>
