--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="gridHelp">
         <div id="player1">
             <input type="text">
-            <h3 id="player1Name"></h3>
+            <h3 id="player1Name" class="names"></h3>
             <h4>Wins:</h4>
             <p id="player1Wins"></p>
         </div>
@@ -34,7 +34,7 @@
         
         <div id="player2">
             <input type="text">
-            <h3 id="player2Name"></h3>
+            <h3 id="player2Name" class="names"></h3>
             <h4>Wins:</h4>
             <p id="player2Wins"></p>
         </div>
