html for help button

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <div id="resetDiv">
         <button id="resetGame">Reset</button>
     </div>
+    <button id="helpModal">Help</button>
 </body>
 </html>
