--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- TODO consider switching a few div's to sections https://stackoverflow.com/questions/6939864/what-is-the-difference-between-section-and-div -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,6 +43,10 @@
     <div id="resetDiv">
         <button id="resetGame">Reset</button>
     </div>
+    <section class="modal hidden">
+        <h2>test help headline</h2>
+    </section>
+    <div class="overlay hidden"></div>
     <button id="helpModal">Help</button>
 </body>
 </html>
