modal iife makes help button open the modal

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- TODO consider switching a few div's to sections https://stackoverflow.com/questions/6939864/what-is-the-difference-between-section-and-div -->
-
+<!-- TODO add an 'x' close on modal -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
