blur background underneath modal

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     </div>
     <section class="modal hidden">
         <h2>test help headline</h2>
+        <h3>How to play:</h3>
+        <p>Click on current player name to enter your own name.</p>
     </section>
     <div class="overlay hidden"></div>
     <button id="helpModal">Help</button>
