draw message is removed on game reset

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </div>
 
     <div id="resetDiv">
+        <p>test</p>
         <button id="resetGame">Reset</button>
     </div>
     <section class="modal hidden">
