update html text content in help modal

--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
         <button id="resetGame">Reset</button>
     </div>
     <section class="modal hidden">
-        <h2>test help headline</h2>
-        <h3>How to play:</h3>
+        <h2>Tic-Tac-Toe Help</h2>
         <p>Click on current player name to enter your own name.</p>
+        <h3>How to play:</h3>
+        <ul>
+            <li>Player 1(X) plays first followed by Player 2(O)</li>
+            <li>Click on any of the nine unoccupied cells to place your token</li>
+            <li>Click the 'reset' button to play again</li>
+        </ul>
     </section>
     <div class="overlay hidden"></div>
     <button id="helpModal">Help</button>
