css for modal text

--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
     </div>
     <section class="modal hidden">
         <h2>Tic-Tac-Toe Help</h2>
-        <p>Click on current player name to enter your own name.</p>
+        <ul>
+            <li>Click on current player name to enter your own name.</li>
+        </ul>
         <h3>How to play:</h3>
         <ul>
             <li>Player 1(X) plays first followed by Player 2(O)</li>
             <li>Click on any of the nine unoccupied cells to place your token</li>
-            <li>Click the 'reset' button to play again</li>
+            <li>Click the reset button to play again</li>
         </ul>
     </section>
     <div class="overlay hidden"></div>
